--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Authentication</title>
+    <title>Libros</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link href="favicon.ico" type="image/x-icon" rel="icon"/>
   </head>
   <body>
     <header>
