--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,10 +11,13 @@
     <header>
       <nav>
         <ul>
+          <li><a href="/">Welcome</a></li>
           <% if (!currentUser) { %>
+            
             <li><a href="/auth/signup">Signup</a></li>
             <li><a href="/auth/login">Login</a></li>
           <% } else { %>
+            <li><a href="/home">Home</a></li>
             <li><a href="/auth/logout">Logout</a></li>
             <li><a href="/profile">Profile</a></li>
           <% } %>
@@ -23,7 +26,7 @@
     </header>
     <%- include("partials/alerts") %>
 
-    <h1>Authentication</h1>
+    <h1>Libros</h1>
     <%- body %>
   </body>
 </html>
