--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,10 +7,15 @@
 <% if (books ) {%> 
   <ul>
     <% books.forEach(book => { %> 
-      <li><%= book.volumeInfo.title %> by <%= book.volumeInfo.authors %> </li>
       <% if (book.volumeInfo.imageLinks) { %> 
         <img src="<%= book.volumeInfo.imageLinks.thumbnail  %>" alt="book cover">
-      <% } %> 
+        <% } %> 
+      <li><%= book.volumeInfo.title %> by <%= book.volumeInfo.authors %> </li>
+      <form method="POST" action="/library">
+        <input type="hidden" name="title" value="<%= book.volumeInfo.title %>">
+        <input type="hidden" name="author" value="<%= book.volumeInfo.authors %>">
+        <input type="submit" value="Add to libray">
+      </form>
 
     <% }) %> 
   </ul>
