--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,6 +14,7 @@
       <form method="POST" action="/library">
         <input type="hidden" name="title" value="<%= book.volumeInfo.title %>">
         <input type="hidden" name="author" value="<%= book.volumeInfo.authors %>">
+        <input type="hidden" name="isbn" value="<%= book.volumeInfo.industryIdentifiers[0].identifier %>">
         <input type="submit" value="Add to libray">
       </form>
 
