--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -18,6 +18,8 @@
             <li><a href="/auth/login">Login</a></li>
           <% } else { %>
             <li><a href="/home">Home</a></li>
+            <li><a href="/library">Library</a></li>
+            
             <li><a href="/auth/logout">Logout</a></li>
             <li><a href="/profile">Profile</a></li>
           <% } %>
