--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Libros</title>
     <link rel="stylesheet" href="/css/style.css">
-    <link href="favicon.ico" type="image/x-icon" rel="icon"/>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <header>
