creates initial css skeleton

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,10 @@
-<h2>Welcome Page ;)</h2>
+<h2 >Welcome Page ;)</h2>
+<div class="row">
+  <div class="col s7">
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus cumque dicta illum porro ipsam natus totam ratione quis recusandae veritatis deleniti quas eligendi necessitatibus, esse dignissimos odio dolorem maxime velit</p>  
+  </div>
+  <div class="col s5">
+    <img class="main-photo" src="/images/homepage.jpg" alt="">
+  </div>
+  
+</div>
