--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -59,6 +59,6 @@
     </div>
     <!-- Materialize JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-      
+    <script src="/js/main.js"></script>   
   </body>
 </html>
