finishes home page styling

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,15 @@
-<h2 >Welcome Page ;)</h2>
-<div class="row">
-  <div class="col s7">
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus cumque dicta illum porro ipsam natus totam ratione quis recusandae veritatis deleniti quas eligendi necessitatibus, esse dignissimos odio dolorem maxime velit</p>  
+
+
+
+
+<div class="row home-page">
+  <div class="main-text col l12 m12 s12">
+    <h1>Welcome... </h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus cumque dicta illum porro ipsam natus totam ratione quis recusandae veritatis deleniti quas eligendi necessitatibus, esse dignissimos odio dolorem maxime velit</p>  
   </div>
-  <div class="col s5">
-    <img class="main-photo" src="/images/homepage.jpg" alt="">
+  <h1></h1>
+  <div class="col l12 m12 s12">
+    <img class="main-photo" src="/images/phone_library.jpeg" alt="">
   </div>
   
 </div>
