--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,7 +6,9 @@
     <title>Libros</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-     
+    
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lobster+Two&family=Permanent+Marker&family=Train+One&family=Zilla+Slab:wght@300;400&display=swap" rel="stylesheet">
      <!-- Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Materialize CSS -->
@@ -16,7 +18,7 @@
   <body>
     <header>
       <nav>
-        <div class="nav-wrapper black">
+        <div class="nav-wrapper ">
           <a href="/" class="brand-logo">Libros</a>
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
@@ -53,7 +55,7 @@
     <%- include("partials/alerts") %>
     <div class="container">
 
-      <h1>Libros</h1>
+      <!-- <h1>Libros</h1> -->
       <%- body %>
       
     </div>
