--- a/public/css/style.css
+++ b/public/css/style.css
@@ -50,7 +50,12 @@ nav .brand-logo {
   text-align: center;
 }
 
-
+.collapsible-header {
+  background-color: rgb(76 178 213) !important;
+}
+.btn {
+  background-color: rgb(52, 115, 144) !important;
+}
 /* MEDIA QUERIES */
 
 @media only screen and (max-width: 500px) {
