--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,61 @@
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  background-color: #e9fdfe;
+  font-family: 'Zilla Slab', serif;
+  font-weight: 300;
+}
+main {
+  flex: 1 0 auto;
+}
 nav ul li {
   text-decoration: none;
   display: inline-block;
   margin-right: .3em;
 }
 
+footer {
+  padding-top: 0;
+  text-align: right;
+}
+#footer {
+  padding: 5px;
+}
+.container {
+  margin-top: 2% !important;
+}
 
+.alert {
+  padding: 20px;
+  color: white;
+  opacity: 1;
+  transition: opacity 0.6s;
+  margin-bottom: 15px;
+  font-weight: 400;
+  font-size: 17px;
+}
+.alert-success {
+  background-color: #4CAF50;
+}
 
+.alert-error {
+  background-color: #f44336;
+}
+
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.closebtn:hover {
+  color: black;
+}
 /* .icon-close {
   display: flex;
 } */
@@ -18,12 +68,6 @@ nav ul li {
  margin-left: 10%;
 } */
 
-body {
-  min-height: 100vh;
-  font-family: 'Zilla Slab', serif;
-  background-color: #e9fdfe;
-  font-weight: 300;
-}
 h1 {
   font-family: 'Lobster Two', cursive;
 }
@@ -50,12 +94,45 @@ nav .brand-logo {
   text-align: center;
 }
 
+.bookshelf {
+  background-image: url(/images/bookshelf.jpeg);
+}
+
+.detail-book-card{
+  margin-top: 20% !important;
+}
+.collapsible h1 {
+  margin-left: 4%;
+  margin-top: 8%;
+}
 .collapsible-header {
   background-color: rgb(76 178 213) !important;
+  font-size: 20px !important;
 }
+.collapsible-header i {
+  font-size: 30px !important;
+}
+
 .btn {
   background-color: rgb(52, 115, 144) !important;
 }
+.datepicker-date-display{
+  background-color:  rgb(52, 115, 144) !important;
+}
+.datepicker-table td.is-selected {
+  background-color: rgb(52, 115, 144) !important;
+  
+}
+.datepicker-done, .datepicker-cancel{
+  color: rgb(52, 115, 144) !important;
+}
+.datepicker-table td.is-today{
+  color: rgb(52, 115, 144) !important;
+}
+.modal {
+  width: 70% !important;
+}
+
 /* MEDIA QUERIES */
 
 @media only screen and (max-width: 500px) {
@@ -64,5 +141,17 @@ nav .brand-logo {
     margin-left: 0;
     margin-top: 23%;
   }
-  
+  .collapsible h1 {
+    font-size: 40px;
+    text-align: center;
+  }
+  .detail-book-card{
+    margin-top: 0 !important;
+  }
+}
+
+@media only screen and (max-width: 992px){
+  .modal {
+    width: 100% !important;
+  }
 }
