--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,12 +1,12 @@
 <form action="/auth/signup" method="POST">
   <label for="new-email">Email</label>
-  <input id="new-email" type="email" name="email" required>
+  <input id="new-email" type="email" class="validate" name="email" required>
 
   <label for="new-name">Name</label>
   <input id="new-name" type="text" name="name">
 
   <label for="new-password">Password</label>
-  <input id="new-password" type="password" name="password" min="8">
+  <input id="new-password" type="password" name="password" min="8" class="validate">
 
   <input type="submit" value="Sign up">
 </form>
