--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,6 @@
+<main >
+  <div class= "container">
+
 <form method="GET" action="/home">
   <label for="title">Title</label>
   <input type="text" name="title" id="title">
@@ -51,4 +54,6 @@
     </div>
   </div>
 </div>
-          
+
+</div>
+</main>
