--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,15 +1,22 @@
+<main >
+  <div class= "container">
 
 
 
 
-<div class="row home-page">
-  <div class="main-text col l12 m12 s12">
-    <h1>Welcome... </h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus cumque dicta illum porro ipsam natus totam ratione quis recusandae veritatis deleniti quas eligendi necessitatibus, esse dignissimos odio dolorem maxime velit</p>  
+
+    <div class="row home-page">
+      <div class="main-text col l12 m12 s12">
+        <h1>Welcome... </h1>
+        <p> We are guessing your aren’t here by accident, chances are you are a book lover, someone who enjoys a good book (some bad ones too) you can get lost for hours reading, and chances are you have a massed quite the collection of books over the years, so many in fact it is now impossible to keep track of them all. Well, you’ve come to the right place, Libros was the brain child of someone just like you a true book lover, who dreamed up the quintessential book organizer where you can easily keep track of your entire library of books, organize them by author, title, write a review and rate each book for future reference, get this you can even keep track of the books you loaned out to friends or family, set a date for its return and receive an alert when it’s over due. We’ve made getting started easy, just sign up and poof your ready to go.
+        </p>  
+      </div>
+      <h1></h1>
+      <div class="col l12 m12 s12">
+        <img class="main-photo" src="/images/phone_library.jpeg" alt="">
+      </div>
+      
+    </div>
+
   </div>
-  <h1></h1>
-  <div class="col l12 m12 s12">
-    <img class="main-photo" src="/images/phone_library.jpeg" alt="">
-  </div>
-  
-</div>
+</main>
