--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -52,13 +52,16 @@
         <% } %>
       </ul>
     </header>
-    <%- include("partials/alerts") %>
-    <div class="container">
+    <!-- <main> -->
+      <!-- <div class="container"> -->
+        <%- include("partials/alerts") %>
 
-      <!-- <h1>Libros</h1> -->
-      <%- body %>
       
-    </div>
+        
+        <%- body %>
+        
+      <!-- </div> -->
+    <!-- </main> -->
     <!-- Materialize JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="/js/main.js"></script>   
