--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,4 +1,45 @@
-<form action="/auth/signup" method="POST">
+
+<main>
+  <div class="container">
+
+    <div class="row">
+      <h1>Welcome to Libros</h1>
+      
+      <form action="/auth/signup" method="POST" class="col s12">
+        <div class="row">
+          <div class="input-field col s12">
+            <label for="new-email">Email</label>
+            <input id="new-email" type="email" class="validate" name="email" required>
+
+          </div>
+        </div>
+        <div class="row">
+          <div class="input-field col s12">
+            <label for="new-name">Name</label>
+            <input id="new-name" type="text" name="name">
+          </div>
+        </div>
+        <div class="row">
+          <div class="input-field col s12">
+            <label for="new-password">Password</label>
+            <input id="new-password" type="password" name="password" min="8" class="validate">
+
+          </div>
+        </div>
+        <div class="row">
+          <div class="input-field col s12">
+
+            <button class="btn white-text waves-effect waves-light" type="submit" value="Sign up">Sign up</button>
+          </div>
+        </div>
+        
+      </form>
+      
+    </div>
+  </div>
+</main>
+
+<!-- <form action="/auth/signup" method="POST">
   <label for="new-email">Email</label>
   <input id="new-email" type="email" class="validate" name="email" required>
 
@@ -9,4 +50,4 @@
   <input id="new-password" type="password" name="password" min="8" class="validate">
 
   <input type="submit" value="Sign up">
-</form>
+</form> -->
