--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,3 +1,11 @@
-<h2>Profile Page</h2>
+<main>
+  <div class="container">
+    <h1> <%=  %>  Profile Page</h1>
 
-<h3>Welcome to your PROFILE</h3>
+
+  </div>
+</main>
+
+
+
+
