--- a/public/css/style.css
+++ b/public/css/style.css
@@ -121,7 +121,7 @@ nav .nav-wrapper {
   background-color: rgb(52, 115, 144);
 }
 
-/* Search Page */
+/* Add Book Page */
 .search-results{
   margin-top: 10%;
 }
@@ -178,6 +178,9 @@ nav .nav-wrapper {
 .collapsible-header i {
   font-size: 30px !important;
 }
+.collapsible-body {
+  font-size: 16px;
+}
 
 .btn {
   background-color: rgb(52, 115, 144) !important;
@@ -214,6 +217,10 @@ nav .nav-wrapper {
   .collapsible h1 {
     
     text-align: center;
+  }
+  .description  {
+    height: 300px;
+    overflow-y: scroll;
   }
   .detail-book-card{
     margin-top: 0 !important;
