--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,16 +4,15 @@
     <h5>Enter the title of your book, we will find it and you can add it to your library</h5>
     <nav>
       <div class="nav-wrapper">
-      <form method="GET" action="/home">
-        <div class="input-field">
-          <input type="search" name="title" id="search" placeholder="Book Title">
-          <label class="label-icon" for="search" ><i class="material-icons">search</i></label>
-          <i class="material-icons">close</i>
-          <!-- <button class="btn" type="submit">Find a Book</button> -->
-        </div>
-      </form>
-    </div>
-  </nav>
+        <form method="GET" action="/home">
+          <div class="input-field">
+            <input type="search" name="title" id="search" placeholder="Book Title">
+            <label class="label-icon" for="search" ><i class="material-icons">search</i></label>
+            <i class="material-icons">close</i>
+          </div>
+        </form>
+      </div>
+    </nav>
     
     <div class="row search-results">
       
@@ -28,7 +27,7 @@
             <input type="hidden" name="image" value="<%= book.volumeInfo.imageLinks.thumbnail %>">
             <% } %> 
               
-            <div class="col s12 m3">
+            <div class="col s12 m3 l3">
               <div class="card">
                 <div class="card-image search-card-img">
                   <% if (book.volumeInfo.imageLinks) { %> 
@@ -37,60 +36,20 @@
                       <img src="/images/book.jpeg" alt="generic book cover">
                   <% } %> 
 
-            <button type="submit" class="btn-floating halfway-fab waves-effect waves-light red"  value="Add to libray"><i class="material-icons">add</i> </button>
-                       
-            </div>
-               
-            <div class="card-content search-card-content">
-              <span class="card-title"><%= book.volumeInfo.title %> </span>
-                  
-            </div>
+            <button type="submit" class="btn-floating halfway-fab waves-effect waves-light red"  value="Add to libray"><i class="material-icons">add</i> </button>    
+                </div>   
+                <div class="card-content search-card-content">
+                  <span class="card-title"><%= book.volumeInfo.title %> </span>   
+                </div>
           </form>
-              
-          
+              </div>
             </div>
-          </div>
+                     
         <% }) %> 
           
-        <% } else {%>
-          <p>No books with that title were found</p>  
-            
+      <% } else {%>
+        <p>No books with that title were found</p>        
       <% } %> 
     </div>
-
-    <!-- <% if (books ) {%> 
-  <ul>
-    <% books.forEach(book => { %> 
-      <% if (book.volumeInfo.imageLinks) { %> 
-        <img src="<%= book.volumeInfo.imageLinks.thumbnail  %>" alt="book cover">
-      <% } else {%> 
-        <img src="/images/book.jpeg" alt="generic book cover">
-      <% } %> 
-
-      <li>
-        <%= book.volumeInfo.title %> by <%= book.volumeInfo.authors %>
-      </li>
-    
-      
-      
-      
-      <form method="POST" action="/library">
-        <input type="hidden" name="title" value="<%= book.volumeInfo.title %>">
-        <input type="hidden" name="author" value="<%= book.volumeInfo.authors %>">
-        <input type="hidden" name="description" value="<%= book.volumeInfo.description %>">
-        <% if (book.volumeInfo.imageLinks) { %> 
-        <input type="hidden" name="image" value="<%= book.volumeInfo.imageLinks.thumbnail %>">
-        <% } %> 
-        <input type="submit" value="Add to libray">
-      </form>
-
-    <% }) %> 
-  </ul>
-<% } else {%>
-  <p>No books with that title were found</p>  
-  
-<% } %>  -->
-
-
-</div>
+  </div>
 </main>
