--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -22,18 +22,13 @@
           <a href="/" class="brand-logo">Libros</a>
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
-        
-            
             <% if (!currentUser) { %>
               <li><a href="/">Welcome</a></li>
               <li><a href="/auth/signup">Signup</a></li>
               <li><a href="/auth/login">Login</a></li>
             <% } else { %>
-              <!-- <li><a href="/home">Home</a></li> -->
               <li><a href="/library">Library</a></li>
-              
               <li><a href="/auth/logout">Logout</a></li>
-              <li><a href="/profile">Profile</a></li>
             <% } %>
           </ul>
         </div>  
@@ -44,24 +39,15 @@
           <li><a href="/auth/signup">Signup</a></li>
           <li><a href="/auth/login">Login</a></li>
         <% } else { %>
-          <!-- <li><a href="/home">Home</a></li> -->
           <li><a href="/library">Library</a></li>
-          
-          <li><a href="/auth/logout">Logout</a></li>
-          <li><a href="/profile">Profile</a></li>
+          <li><a href="/auth/logout">Logout</a></li>   
         <% } %>
       </ul>
     </header>
-    <!-- <main> -->
-      <!-- <div class="container"> -->
-        <%- include("partials/alerts") %>
-
-      
-        
-        <%- body %>
-        
-      <!-- </div> -->
-    <!-- </main> -->
+    
+      <%- include("partials/alerts") %>
+      <%- body %>
+      <%- include("partials/footer")  %>   
     <!-- Materialize JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="/js/main.js"></script>   
