--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,15 +6,15 @@
     <title>Libros</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-    
+    <!-- Google Fonts-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lobster+Two&family=Permanent+Marker&family=Train+One&family=Zilla+Slab:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lobster+Two&family=Permanent+Marker&family=Train+One&family=Zilla+Slab:wght@300;400&display=swap" rel="stylesheet">
      <!-- Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Materialize CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-           
   </head>
+           
   <body>
     <header>
       <nav>
